# VEX_strategy_ai

./: .gitignore  README.md  config.py  eval.py  main.py  play.ipynb  play.py  pyproject.toml  run_env_episode.py  test_inf.py  train.py  train.sh  ui.py  vis.py
env/: config.py  engine.py  env.py  legal_actions.py  observation_encoder.py  renderer.py  type.py  utils.py
env/engine_core/: __init__.py  config.yml  field_component.py  robot.py  utils.py
eval/: evaluator.py
evaluator/: eval_worker.py  evaluator.py
model/: mlp.py  model.py  transformer.py  utils.py
trainer/: buffer.py  inference.py  shared.py  trainer.py  utils.py  worker.py
