[project]
name = "sai"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "numpy>=2.2.6",
    "pydantic>=2.12.5",
    "pygame>=2.6.1",
    "pymunk>=7.2.0",
    "pytest>=9.0.2",
    "pyyaml>=6.0.3",
    "torch>=2.10.0",
    "trueskill>=0.4.5",
    "wandb>=0.25.1",
]
